--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
 <html>
 <head>
-
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="boot.css"/>
-
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<link rel="stylesheet" href="css/bootstrap.min.css"/>
+<link rel="stylesheet" type="text/css" href="style.css"/>
+<title>Register</title> 
 </head>
 <body>
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<button type="button" class="btn btn-primary">Primary</button>
-<div class="container btr">
-hii
-</div>
+<div class="container box">
+<div class="container minbox">
+<h1>Register Here</h1>
+<form>
+<label>Name</label>
+<input type="text" placeholder="enter the name"/><br>
+<label>Father Name</label>
+<input type="text" placeholder="enter the father name"/><br>
+<label>Date of Birth</label>
+<input type="date"><br>
+<label>Country</label>
 <select>
-<option >India</option>
-<option >Pakistan</option>
-<option >America</option>
-</select>
+<option>India</option>
+<option>Pakistan</option>
+<option>America</option>
+<option>Africa</option>
+</select><br>
+<label>Email Id</label>
+<input type="email" placeholder="enter the Email"><br>
+<label>Password</label>
+<input type="password" placeholder="enter the password"><br>
+<input type="submit" value="submit">
+<input type="submit" value="Reset">
+</form>
+</div>
+</div>
 </body>
 </html>
